# db-benchmark

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmark.csv
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
src/: Table.h  diagrams.py  filters.h  timeTesting.cpp
src/column_store/: ColumnStoreHelper.h  ColumnStoreTable.h  ColumnStoreTable_AVX.h  main.cpp
src/include/: Benchmark.h  BenchmarkResult.h  Constants.h  Filters.h  Filters_AVX.h  Helper.h  ITable.h  ITable_AVX.h  MTime.h  SIMD.h  Table.h
src/include/Filters/: All.h  Base.h  Equal.h  GreaterEqual.h  GreaterThan.h  LessEqual.h  LessThan.h  NotEqual.h
src/pax_store/: Memory.cpp  Memory.h  Page.cpp  Page.h  PaxTable.cpp  PaxTable.h  PaxTable_AVX.cpp  PaxTable_AVX.h  Types.h  filters.cpp  main.cpp  memory.cpp  page.cpp  pax.cpp  table.cpp  table_avx.cpp  types.h
src/row_store/: BaseTable.h  BaseTable_AVX.h  Filter.h  Filter_AVX.h  IntermediateTable.h  IntermediateTable2.h  IntermediateTable_AVX.h  Projection.h  Projection_AVX.h  RowStoreTable.h  StridedTable.h  StridedTableVectorIterator.h  Table.h  main.cpp
src/row_store/copy_tuple_codegen/: codegen.py  copyMaskedTuple.h  copyMaskedTupleNaive.h  foot.txt  head.txt
src/row_store/intermediateRepresentation/: IntermediateTable.h  Iterator.h  ScalarIterator.h  VectorIterator.h
src/test/: Database.h  Dataset.h  Runner.h  Shell.h  dataset.h  main.cpp  shell.h  sqlite.h
src/test/helpers/: Assert.h  Projection.h  QueryResult.h
src/tests/: TestUtils.h  test.cpp
